# warp

./: AGENTS.md  Cargo.toml
.github/workflows/: check_approvals.yml  ci.yml  close_stale_fix_prs.yml  create_release.yml  cut_new_releases.yml  feature_flag_cleanup.yml  label_external_contributors.yml  populate_build_cache.yml  repo-sync.yml  stale_requested_changes_prs.yml  sync-pr-checks.yml  update-dedupe-local.yml  update-pr-review-local.yml  update-triage-local.yml  warp_cleanup_fix_prs.yml
app/: Cargo.toml  build.rs
app/src/: app_menus.rs  app_state.rs  changelog_model.rs  features.rs  lib.rs  reward_view.rs  root_view.rs  screenshot_watcher.rs  tab.rs  tui.rs  tui_export.rs  tui_tests.rs  wasm_nux_dialog.rs
crates/github_client/: Cargo.toml
crates/voice_tts/: Cargo.toml
crates/voice_tts/examples/: synth.rs
crates/voice_tts/src/: aec.rs  config.rs  lib.rs  phonemizer.rs  piper.rs
crates/warp_tui/: Cargo.toml
crates/warpui/: build.rs
crates/warpui_core/: Cargo.toml
crates/warpui_tui/: Cargo.toml
doc/: Plan_github.md
docs/: Plan_github.md  design.md  voice_client.md
script/: build  dev  harness  install_cargo_test_deps  prepare_bundled_resources  run  snapshot  ui-shot
script/linux/: bundle
script/macos/: bundle  run
script/wasm/: bundle
script/windows/: bundle.ps1  prepare_bundled_resources.ps1
specs/REMOTE-1661/: PRODUCT.md  TECH.md
specs/core-tui-model/: TECH.md
specs/share-terminal-model/: TECH.md
specs/surface-agnostic-file-edit-execution/: TECH.md
specs/warp-control-cli/: PRODUCT.md  README.md  SECURITY.md  TECH.md
(+609 files in other folders)
